--- a/style/style.css
+++ b/style/style.css
@@ -99,3 +99,33 @@ footer p{
     height: 800px;
     margin:0 auto;
 }
+
+#stopwatch{
+    width:40%;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    display: block;
+    padding: 5px;
+}
+
+#timer, #fulltime{
+    width: auto;
+    height:auto;
+    padding:10px;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: block;
+    border: 1px;
+    text-align: center;
+    box-shadow: 0 0 5px #ccc;
+    background: #fbfbf0;
+    color:darkblue;
+    border-bottom: 4px solid darkgrey;
+}
+
+#fulltime{
+    font-size: 16px;
+    font-weight: bold;
+    display: none;
+}
