--- a/style/style.css
+++ b/style/style.css
@@ -105,12 +105,11 @@ footer p{
 /* styling for the box that appears on the reaction test page */
 #box{
     position: relative;
-    top:5%;
-    width: 1300px;
+    width: 1100px;
     border:5px solid limegreen;
-    height: 800px;
+    height: 500px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 3px;
     text-align: center;
 }
 
@@ -123,13 +122,13 @@ footer p{
     position: relative;
     text-align: center;
     display: block;
-    padding: 5px;
+    padding-top: 2px;
 }
 
 #timer, #fulltime{
     width: auto;
     height:auto;
-    padding:10px;
+    padding: 10px;
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: block;
@@ -147,7 +146,7 @@ footer p{
     display: none;
 }
 
-.description{
+#description{
     padding: 10px;
     font-size: 20px;
 }
